角色模块完成

--- a/pycro-select-backend/pycslt-parent/pycslt-manager/src/main/resources/application-dev.yml
+++ b/pycro-select-backend/pycslt-parent/pycslt-manager/src/main/resources/application-dev.yml
@@ -26,6 +26,7 @@ mybatis-flex:
 app:
   auth:
     noAuthUrls:
+      - /doc.html
       - /admin/system/index/login
       - /admin/system/index/generateValidateCode
   mysql:
