--- a/pycro-select-backend/pycslt-parent/pycslt-manager/pom.xml
+++ b/pycro-select-backend/pycslt-parent/pycslt-manager/pom.xml
@@ -66,6 +66,13 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.4.3</version>
         </dependency>
+
+        <!-- common-log -->
+        <dependency>
+            <groupId>usts.pycro</groupId>
+            <artifactId>common-log</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
