前台系统-分类树形展示

--- a/pycro-select-backend/pycslt-parent/pycslt-service/pom.xml
+++ b/pycro-select-backend/pycslt-parent/pycslt-service/pom.xml
@@ -60,16 +60,16 @@
         </dependency>
 
         <!-- 服务注册 -->
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-        </dependency>
+        <!-- <dependency> -->
+        <!--     <groupId>com.alibaba.cloud</groupId> -->
+        <!--     <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId> -->
+        <!-- </dependency> -->
 
         <!-- 流量控制 -->
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
-        </dependency>
+        <!-- <dependency> -->
+        <!--     <groupId>com.alibaba.cloud</groupId> -->
+        <!--     <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId> -->
+        <!-- </dependency> -->
 
     </dependencies>
 </project>
