--- a/pycro-select-backend/pycslt-parent/pycslt-service/pom.xml
+++ b/pycro-select-backend/pycslt-parent/pycslt-service/pom.xml
@@ -60,10 +60,10 @@
         </dependency>
 
         <!-- 服务注册 -->
-        <!-- <dependency> -->
-        <!--     <groupId>com.alibaba.cloud</groupId> -->
-        <!--     <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId> -->
-        <!-- </dependency> -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
 
         <!-- 流量控制 -->
         <!-- <dependency> -->
