--- a/pycro-select-backend/pycslt-parent/pom.xml
+++ b/pycro-select-backend/pycslt-parent/pom.xml
@@ -33,6 +33,7 @@
         <lombok.version>1.18.20</lombok.version>
         <mybatis.version>3.0.1</mybatis.version>
         <mybatis-flex.version>1.7.3</mybatis-flex.version>
+        <manifold-version>2023.1.29</manifold-version>
 
         <!-- 微服务相关依赖版本 -->
         <cloud.version>2022.0.2</cloud.version>
@@ -128,8 +129,13 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
+                    <encoding>UTF-8</encoding>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <compilerArgs>
+                        <!--Add the Manifold plugin-->
+                        <arg>-Xplugin:Manifold</arg>
+                    </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -140,6 +146,11 @@
                             <groupId>com.mybatis-flex</groupId>
                             <artifactId>mybatis-flex-processor</artifactId>
                             <version>${mybatis-flex.version}</version>
+                        </path>
+                        <path>
+                            <groupId>systems.manifold</groupId>
+                            <artifactId>manifold-strings</artifactId>
+                            <version>${manifold-version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
