--- a/pycro-select-backend/pycslt-parent/pycslt-service/pom.xml
+++ b/pycro-select-backend/pycslt-parent/pycslt-service/pom.xml
@@ -76,6 +76,10 @@
         <!--     <groupId>com.alibaba.cloud</groupId> -->
         <!--     <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId> -->
         <!-- </dependency> -->
-
+        <!-- 服务配置 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
     </dependencies>
 </project>
