--- a/pycro-select-backend/pycslt-parent/pycslt-service/service-cart/src/main/resources/application.yml
+++ b/pycro-select-backend/pycslt-parent/pycslt-service/service-cart/src/main/resources/application.yml
@@ -1,3 +1,13 @@
 spring:
-  profiles:
-    active: dev
+  cloud:
+    nacos:
+      config:
+        server-addr: ${app.nacos.host}:${app.nacos.port}
+  config:
+    import:
+      - nacos:service-cart-dev.yml
+
+app:
+  nacos:
+    host: 192.168.73.128
+    port: 8848
