前台系统-订单支付完成

--- a/pycro-select-backend/pycslt-parent/pycslt-service/service-pay/pom.xml
+++ b/pycro-select-backend/pycslt-parent/pycslt-service/service-pay/pom.xml
@@ -5,18 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>usts.pycro</groupId>
-        <artifactId>pycslt-parent</artifactId>
+        <artifactId>pycslt-service</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>pycslt-service-client</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>service-product-client</module>
-        <module>service-user-client</module>
-        <module>service-cart-client</module>
-        <module>service-order-client</module>
-    </modules>
+    <artifactId>service-pay</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -24,32 +17,19 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
-
         <dependency>
             <groupId>usts.pycro</groupId>
-            <artifactId>common-util</artifactId>
+            <artifactId>service-product-client</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>provided </scope>
         </dependency>
-
         <dependency>
             <groupId>usts.pycro</groupId>
-            <artifactId>pycslt-model</artifactId>
+            <artifactId>service-order-client</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>provided </scope>
         </dependency>
-
-        <!-- openfeign依赖 -->
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
         </dependency>
-
-        <!-- loadbalancer依赖 -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-loadbalancer</artifactId>
-        </dependency>
-
     </dependencies>
 </project>
