--- a/pycro-select-backend/pycslt-parent/pycslt-service-client/pom.xml
+++ b/pycro-select-backend/pycslt-parent/pycslt-service-client/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -29,14 +29,14 @@
             <groupId>usts.pycro</groupId>
             <artifactId>common-util</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>provided </scope>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>usts.pycro</groupId>
             <artifactId>pycslt-model</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>provided </scope>
+            <scope>provided</scope>
         </dependency>
 
         <!-- openfeign依赖 -->
