--- a/pycro-select-backend/pycslt-parent/pycslt-service/service-user/pom.xml
+++ b/pycro-select-backend/pycslt-parent/pycslt-service/service-user/pom.xml
@@ -38,7 +38,7 @@
                         <phase>package</phase>
                         <goals>
                             <goal>build</goal>
-                            <!-- <goal>push</goal> -->
+                            <goal>push</goal>
                         </goals>
                     </execution>
                 </executions>
